--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-netlify-cms",
+  "name": "sample-app",
   "description": "Example Gatsby, and Netlify CMS project",
   "version": "1.1.3",
-  "author": "Austin Green",
+  "author": "shin-hama",
   "dependencies": {
     "bulma": "^0.9.0",
     "gatsby": "^4.0.0",
